Waypoint on mymaps.google.com replacement
* collections for locations
* leaflet integration for waypoint display
* import data from mymaps.google.com (exported to kmz, imported with custom script (included))
* Use leaflet awesome maerks and marker clusters to enhance experience
* remove some stock jekyll stuff:
    * busted jekyll-feed plugin (for posts)
    * kill footer
    * about page
    * default post
* try to be DRY
* add debug mode function
* itemized todo

--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,29 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://maps-and-legends.heavyimage.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: heavyimage
 github_username:  heavyimage
+collections:
+  waypoints:
+    output: true
+    permalink: /place/:path/
+
+defaults:
+  - scope:
+      path: ""
+      type: waypoints
+    values:
+      layout: waypoint-detail
+
+# leaflet
+map_debug: False
+leafletstyle: 'Hydda_Full'
+
+home_lat: 40.78
+home_lon: -73.96
+home_zoom: 11
 
 # Build settings
 markdown: kramdown
 theme: minima
-plugins:
-  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
